update the BrushStroke component styles - apply class and set to position absolute (prevent the svg from adding extra space in the html document)

--- a/src/components/common/BrushStroke/BrushStroke.scss
+++ b/src/components/common/BrushStroke/BrushStroke.scss
@@ -6,3 +6,8 @@
     width: 100%;
     height: 100px;
 }
+
+.brush-stroke-svg {
+    position: absolute;
+    pointer-events: none;
+}
